<resources>
    <string name="app_name">Amstock</string>
    <string name="cannot_open_amstock">无法打开 Amstock</string>
    <string name="load_failed">服务器暂时无法访问，请检查网络后重试。</string>
    <string name="load_failed_with_reason">加载失败：%1$s</string>
    <string name="network_unavailable">当前没有可用网络，请连接 Wi-Fi 或移动网络后重试。</string>
    <string name="retry">重试</string>
    <string name="choose_image">拍照或选择图片</string>
    <string name="camera_photo">Amstock 拍摄的照片</string>
    <string name="image_upload_settings">图片上传设置</string>
    <string name="settings">设置</string>
    <string name="scan_item">扫码</string>
    <string name="invalid_item_code">未识别到有效的 Amstock 编号</string>
    <string name="scanner_unavailable">无法启动系统扫码功能，请确认 Google Play 服务可用后重试</string>
    <string name="logout">退出登录</string>
    <string name="logout_confirmation">确定要退出当前 Amstock 账号吗？</string>
    <string name="image_selection_setting_title">点击“选择图片”时</string>
    <string name="image_selection_camera">直接进入拍照</string>
    <string name="image_selection_files">直接进入文件选择</string>
    <string name="image_selection_ask">每次询问</string>
    <string name="image_selection_saved">已设置为：%1$s</string>
    <string name="camera_unavailable">没有可用的相机，已改为选择文件</string>
    <string name="processing_photo">正在压缩照片…</string>
    <string name="photo_compression_failed">照片压缩失败，未上传原图，请重新拍摄</string>
    <string name="no_file_picker">无法打开相机或文件选择器</string>
    <string name="unsupported_link">出于安全原因，无法打开此链接</string>
    <string name="no_app_for_link">没有可用于打开此链接的应用</string>
    <string name="download_blocked">只允许通过 HTTPS 下载文件</string>
    <string name="downloading">正在从 Amstock 下载</string>
    <string name="download_started">已开始下载</string>
    <string name="download_failed">下载启动失败</string>
</resources>
